# CURVA

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  curva-api-docs.md  pyproject.toml
docs/: api-reference.md  n8n-integration.md
docs/superpowers/plans/: 2026-05-11-curva-cs-agent.md
docs/superpowers/specs/: 2026-05-11-curva-cs-agent-design.md
src/curva_agent/: __init__.py  config.py  deps.py  main.py
src/curva_agent/cache/: __init__.py  lru.py
src/curva_agent/curva_client/: __init__.py  client.py
src/curva_agent/llm/: __init__.py  client.py  prompts.py  tool_loop.py
src/curva_agent/observability/: logging.py  rate_limit.py
src/curva_agent/orchestrator/: finalize.py  orchestrator.py
supabase/: config.toml
supabase/migrations/: 20260511000001_reference_tables.sql  20260511000002_taxonomy_sync_runs.sql  20260511000004_agent_sessions.sql  20260511000005_agent_logs.sql  20260511000006_rls_policies.sql  20260511000007_future_embeddings.sql
tests/: conftest.py
tests/integration/: test_agent_query.py  test_session_flow.py
tests/unit/: test_admin_routes.py  test_cache.py  test_config.py  test_curva_client.py  test_curva_schemas.py  test_finalize_schema.py  test_get_product_tool.py  test_lifespan.py  test_llm_client.py  test_logging.py  test_logs_repo.py  test_main.py  test_offers_branches_tools.py  test_orchestrator.py  test_parallel_fetch.py  test_product_synthesizer.py  test_prompts.py  test_rate_limit.py  test_search_products_tool.py  test_session_repo.py  test_taxonomy_repo.py  test_taxonomy_sync.py  test_tool_loop.py
(+25 files in other folders)
