[project]
name = "curva-cs-agent"
version = "0.1.0"
description = "WhatsApp customer service agent for curvaegypt.com"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx[http2]>=0.27",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "openai>=1.55",
  "supabase>=2.10",
  "cachetools>=5.5",
  "tenacity>=9.0",
  "structlog>=24.4",
  "python-dotenv>=1.0",
  "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "ruff>=0.7",
  "mypy>=1.13",
  "freezegun>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/curva_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"